--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "material-design-lite": "^1.3.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-js-pagination": "^3.0.2",
     "react-mdl": "^1.11.0",
+    "react-paginate": "^5.2.4",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
